<resources>
    <!--Text!-->
    <string name="app_name">MyPassword</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="next">下一步</string>
    <string name="skip">不设置密码</string>
    <string name="change">修改登录密码</string>
    <string name="set_password">输入密码：</string>
    <string name="reset_password">再输一次：</string>
    <string name="title">标题：</string>
    <string name="password_group">分组：</string>
    <string name="user_name">账号：</string>
    <string name="password">密码：</string>
    <string name="pay_password">支付：</string>
    <string name="save">保存</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="add">添加</string>
    <string name="import_password">导入</string>
    <string name="output_password">导出</string>
    <string name="just">刚刚</string>
    <string name="minute_ago">%d分钟前</string>
    <string name="hour_ago">%d小时前</string>
    <string name="copy_user_name">复制账号到剪贴板</string>
    <string name="copy_password">复制密码到剪贴板</string>
    <string name="copy_pay_password">复制支付密码到剪切板</string>
    <string name="add_password_group">添加分组</string>
    <string name="merge_password_group">合并分组到</string>
    <string name="edit_password_group_name">修改分组名</string>
    <string name="new_password_group_name">新的分组名</string>
    <string name="default_password_group_name">默认</string>
    <string name="delete_password_group">删除分组</string>
    <string name="gen_password">生成密码</string>
    <string name="gen_char">字符：</string>
    <string name="gen_length">长度：</string>
    <string name="gen_password_result">密码：</string>
    <string name="gen_char_lows">a&#8211;z</string>
    <string name="gen_char_caps">A&#8211;Z</string>
    <string name="gen_char_numbers">0&#8211;9</string>
    <string name="gen_char_special">其他</string>
    <string name="gen_length_eight">8</string>
    <string name="gen_length_sixteen">16</string>
    <string name="gen">生成</string>
    <string name="regen">重新生成</string>
    <string name="decription">Image</string>
    <!--Msg！-->
    <string name="first_password_hint">为了安全，请设置密码.</string>
    <string name="set_password_hint">请输入密码</string>
    <string name="reset_password_hint">请再次输入密码</string>
    <string name="different_password">两次密码不同</string>
    <string name="wrong_password">密码不正确</string>
    <string name="no_password">没有密码，添加几个试试</string>
    <string name="title_hint">输入标题(必须)</string>
    <string name="user_name_hint">输入您的账号</string>
    <string name="password_hint">输入您的密码</string>
    <string name="pay_password_hit">输入您的支付密码</string>
    <string name="note_hint">这里可以记录一些备注信息</string>
    <string name="empty_title">标题不可为空</string>
    <string name="copy_use_name_msg">已复制账号到剪贴板</string>
    <string name="copy_password_msg">已复制密码到剪贴板</string>
    <string name="copy_pay_password_msg">已复制支付密码到剪切板</string>
    <string name="delete_password_message">删除后不可恢复，您确定吗？</string>
    <string name="deleted_password_message">该条密码已经被删除</string>
    <string name="password_group_hint">输入分组名</string>
    <string name="delete_password_group_msg">将删除\"%s\"分组下的所有密码，不可恢复，你确定删除吗？</string>
    <string name="merge_password_group_error">没有分组可合并</string>
    <string name="merge_password_group_loading">读取数据中，请稍候&#8230;</string>
    <string name="gen_password_msg">请选择你需要的字符</string>
    <string name="output_error">导出异常</string>
    <string name="output_done">导出完成，路径:/sdcard/Download/MyPasswordBackup.json</string>
    <string name="import_error">导入异常</string>
    <string name="import_done">导入成功</string>
</resources>
