<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cn.xing.mypassword.AddPasswordActivity">

    <item
        android:id="@+id/action_gen"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/gen_password"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/action_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        android:visible="false"/>
</menu>