<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/gen_password"
        android:textColor="@color/title_color"
        android:textSize="20sp" />

    <View
        android:id="@+id/main_item_line"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/gen_char"
            android:textColor="@color/name_color"
            android:textSize="15sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/gen_char_lows"
            android:id="@+id/gen_password_lows"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/gen_char_caps"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/gen_password_caps"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/gen_char_numbers"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/gen_password_numbers"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/gen_char_special"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/gen_password_special"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:maxLength="50"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/gen_length"
            android:textColor="@color/name_color"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="38dp" android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_length_eight"
                android:checked="true"
                android:id="@+id/gen_password_len_eight"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_length_sixteen"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:id="@+id/gen_password_len_sixteen"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/gen_password_result"
            android:textColor="@color/name_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/gen_password_result"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/edit_text_holo_light"
            android:gravity="center_vertical"
            android:hint="@string/gen_password"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:textColor="@color/text_color"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_item_function"
            android:clickable="true"
            android:id="@+id/gen_password_gen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.7"
                android:gravity="center_vertical"
                android:text="@string/gen"
                android:textColor="@color/item_function_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/gen_password_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_item_function"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.7"
                android:gravity="center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/item_function_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/gen_password_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_item_function"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.7"
                android:gravity="center_vertical"
                android:text="@string/sure"
                android:textColor="@color/item_function_text_color"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
