<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@color/app_background"
    tools:context="young.home.com.mypassword.activity.EditPasswordActivity">

    <LinearLayout
        android:id="@+id/root_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/common_card_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editview_title"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_holo_light"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/title_hint"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            </LinearLayout>

            <View
                android:id="@+id/main_item_line"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/password_group"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/editview_spinner"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/spinner_background_holo_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/user_name"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/editview_name"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/edit_text_holo_light"
                android:completionThreshold="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/user_name_hint"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/password"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/editview_password"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/edit_text_holo_light"
                android:completionThreshold="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/main_item_note_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_retweet"
            android:visibility="visible" >

            <EditText
                android:id="@+id/editview_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_text_holo_light"
                android:hint="@string/note_hint"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        </LinearLayout>
</ScrollView>
